<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <!-- IMAGEN -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_Articulo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_item"
                android:labelFor="@+id/img_Articulo"
                android:scaleType="fitCenter"
                android:src="@drawable/app_logo" />
        </LinearLayout>


        <!-- USUARIO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_usuario_login"
                android:text="@string/tv_usuario" />

            <EditText
                android:id="@+id/et_usuario_login"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="text" />
        </LinearLayout>

        <!-- CONTRASEÑA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_contrasena_login"
                android:text="@string/tv_contrasena" />

            <EditText
                android:id="@+id/et_contrasena_login"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textPassword" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="invisible" />
        <CheckBox
            android:id="@+id/chkRecordarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_recordar_usuario" />

        <!-- BOTON -->
        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_registro_login"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGray"
                android:gravity="center"
                android:text="@string/btn_registro" />

            <Button
                android:id="@+id/btn_ingresar_login"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/btn_ingresar" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>