<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- TOOLBAR -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp">
            <!-- IMAGEN -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_Articulo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_item"
                    android:labelFor="@+id/img_Articulo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/app_logo" />
            </LinearLayout>

            <!-- USUARIO -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_usuario_registro"
                    android:text="@string/tv_usuario" />

                <EditText
                    android:id="@+id/et_usuario_registro"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:inputType="text" />
            </LinearLayout>

            <!-- MAIL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_mail_registro"
                    android:text="@string/tv_mail" />

                <EditText
                    android:id="@+id/et_mail_registro"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:inputType="text" />
            </LinearLayout>

            <!-- PASSWORD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_password_registro"
                    android:text="@string/tv_contrasena" />

                <EditText
                    android:id="@+id/et_password_registro"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_password_confirmacion"
                    android:text="@string/tv_contrasena_confirmacion" />

                <EditText
                    android:id="@+id/et_password_confirmacion"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
        <!-- BOTONES -->
        <LinearLayout
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_limpiar_registro"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGray"
                android:gravity="center"
                android:text="@string/btn_limpiar" />

            <Button
                android:id="@+id/btn_registro_registro"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/btn_registro" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>